crates/ci-tests/tests/snapshots/use_case_tester__cmd-sui_client_switch_--env_mainnet.snap
---
source: crates/ci-tests/tests/use_case_tester.rs
expression: cmd_output
---
Active environment switched to [mainnet]
