crates/ci-tests/tests/snapshots/use_case_tester__std-output-regular-mainnet-add-with-dot-sui.snap
---
source: crates/ci-tests/tests/use_case_tester.rs
expression: std_output
---
Active environment switched to [mainnet]

Successfully added dependency pkg.sui/qwer/1 to your Move.toml

You can use this dependency in your modules by calling: use mvr_a::<module>;

Output from mvr:
  │ [mvr] detected valid SUI version: 1.63
  │ [mvr] resolving: "@pkg/qwer/1" on network:  mainnet
