crates/ci-tests/tests/snapshots/use_case_tester__std-output-regular-mainnet.snap
---
source: crates/ci-tests/tests/use_case_tester.rs
expression: std_output
---
Active environment switched to [mainnet]

Successfully added dependency @mvr/demo to your Move.toml

You can use this dependency in your modules by calling: use demo::<module>;


Successfully added dependency @testingafreeclaim/upgraded to your Move.toml

You can use this dependency in your modules by calling: use upgraded::<module>;


Successfully added dependency @pkg/qwer to your Move.toml

You can use this dependency in your modules by calling: use mvr_a::<module>;
