crates/ci-tests/tests/snapshots/use_case_tester__std-output-versioned-mainnet-no-sui-dep.snap
---
source: crates/ci-tests/tests/use_case_tester.rs
expression: std_output
---
Active environment switched to [mainnet]

Successfully added dependency @pkg/qwer/1 to your Move.toml

You can use this dependency in your modules by calling: use mvr_a::<module>;
