crates/ci-tests/tests/snapshots/use_case_tester__toml-regular-mainnet-add-with-dot-sui.snap
---
source: crates/ci-tests/tests/use_case_tester.rs
expression: output_toml
---
[package]
name = "nftmaker"
edition = "2024.beta"

[dependencies]
mvr_a = { r.mvr = "pkg.sui/qwer/1" }

[addresses]
nftmaker = "0x0"
