crates/ci-tests/tests/snapshots/use_case_tester__toml-regular-mainnet.snap
---
source: crates/ci-tests/tests/use_case_tester.rs
expression: output_toml
---
[package]
name = "nftmaker"
edition = "2024.beta"

[dependencies]
Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "framework/mainnet" }
demo = { r.mvr = "@mvr/demo" }
upgraded = { r.mvr = "@testingafreeclaim/upgraded" }
mvr_a = { r.mvr = "@pkg/qwer" }

[addresses]
nftmaker = "0x0"
