crates/ci-tests/tests/snapshots/use_case_tester__toml-unsupported-network-with-env.snap
---
source: crates/ci-tests/tests/use_case_tester.rs
expression: output_toml
---
[package]
name = "nftmaker"
edition = "2024.beta"

[dependencies]
mvr = { r.mvr = "@mvr/core" }

[addresses]
nftmaker = "0x0"
